--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,13 @@
  */
 
 /* You can override the default Infima variables here. */
+
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap";
+
+html, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', sans-serif;
+}
+
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
@@ -15,6 +22,8 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    
+
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -32,3 +41,20 @@
 [data-theme="dark"] .invert {
   filter: invert(1);
 }
+
+/*
+a {
+    text-decoration-line: underline!important;
+    text-underline-offset: 4px;
+    text-decoration-color: #fda4af;
+    color: rgb(244 63 94) !important;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+
+a:hover {
+    text-decoration-color: #f43f5e !important;
+    color: rgb(190 18 60);
+}
+*/
